try to fix occasional flash of incorrectly positioned content on firefox 52 esr (?)

--- a/src/MouseOver.scss
+++ b/src/MouseOver.scss
@@ -1,4 +1,7 @@
 .tooltip {
+	top: 0;
+	left: 0;
+	position: absolute;
 	white-space: pre-wrap;
 	font-size: 12px;
 	color: #fff;
